src/test/ui-fulldeps/proc-macro/load-panic.stderr
error: proc-macro derive panicked
  --> $DIR/load-panic.rs:17:10
   |
LL | #[derive(A)]
   |          ^
   |
   = help: message: nope!

